refactor: refactored code with features from  java14 + tests
java 14 features
added tests
TODO : tests with embedded kafka testing the controller